--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    padding: 0;
+    margin: 0;
+    background-color: rgba(98, 136, 223, 0.0784313725);
+    font-family: "Roboto", sans-serif;
+}
